# Prak-2.0-v2

./: CMakeLists.txt  Dockerfile  ci-cd.yml  config.json  deployment.yaml  v2.0.txt
.github/workflows/: ci-cd.yml  ci-cdv2.yml  docker-publish.yml  main.yml
controllers/: Controller.cpp  calk.h
test/: test.cpp  test_api.cpp
v3/: 2.6  CMakeLists.txt  Dockerfile  main.cpp  v1.0.txt  v2.5
v3/controllers/: Controller.cpp
v3/test/: Dockerfile  app.cpp
